changed homepage address

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portifolio",
-  "homepage": "http://fmagesty.github.io",
+  "homepage": "http://fmagesty.github.io/fmagesty",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
